corrected the font and mobile overflow

--- a/style.css
+++ b/style.css
@@ -154,8 +154,9 @@ p {
   line-height: 1.2rem;
 }
 
+
 .bio_wrappar h1 {
-  font-size: calc(clamp(2.75em, 4.3vw, 4.5em) * 1.5);
+  font-size: calc(clamp(1.6rem, 4.3vw, 4.5em) * 1.5);
   text-align: center;
   width: auto;
   line-height: 110%;
@@ -707,6 +708,7 @@ body {
   font-family: Inter,sans-serif;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   line-height: 1.5;
 }
 
@@ -2776,7 +2778,8 @@ img {
   right: 0;
   left: 0;
   height: 100vh;
-
+width: 100%;
+overflow-x: hidden;
   z-index: 0;
 
   opacity: 1;
